# ICRA-Reverse-Engineering

./: README.md  icramerge.py  pyproject.toml
icra_sim/: config.py
icra_sim/mobility/: gauss_markov.py
result/: ICRA_An_Intelligent_Clustering_Routing_Approach_for_UAV_Ad_Hoc_Networks.pdf:Zone.Identifier  metrics.csv  weights_icra_case1_N10.csv  weights_icra_case1_N100.csv  weights_icra_case1_N20.csv  weights_icra_case1_N50.csv  weights_icra_case2_N10.csv  weights_icra_case2_N100.csv  weights_icra_case2_N20.csv  weights_icra_case2_N50.csv  weights_icra_case3_N10.csv  weights_icra_case3_N100.csv  weights_icra_case3_N20.csv  weights_icra_case3_N50.csv
results/: metrics.csv  weights_icra_case1_N10.csv  weights_icra_case1_N100.csv  weights_icra_case1_N20.csv  weights_icra_case1_N50.csv  weights_icra_case2_N10.csv  weights_icra_case2_N100.csv  weights_icra_case2_N20.csv  weights_icra_case2_N50.csv  weights_icra_case3_N10.csv  weights_icra_case3_N100.csv  weights_icra_case3_N20.csv  weights_icra_case3_N50.csv
scripts/: check_consistency.py  run_experiments.py
scripts/results/: metrics.csv  weights_icra_case1_N10.csv  weights_icra_case1_N100.csv  weights_icra_case1_N20.csv  weights_icra_case1_N50.csv  weights_icra_case2_N10.csv  weights_icra_case2_N100.csv  weights_icra_case2_N20.csv  weights_icra_case2_N50.csv  weights_icra_case3_N10.csv  weights_icra_case3_N100.csv  weights_icra_case3_N20.csv  weights_icra_case3_N50.csv
src/icra_sim/: config.py  link.py  metrics.py  node.py  radio.py  simulator.py  (+1 more)
src/icra_sim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+4 files in other folders)
